# opentelemetry-extension

./: .gitignore  README.md  flake.nix  setup.cfg
opentelemetry_extension/: __init__.py  extension.py
