[metadata]
name = opentelemetry-extension
version = 0.1.0
url = https://github.com/simonrw/opentelemetry-extension
author = Simon Walker
author_email = simon.walker@localstack.cloud
description = Trace LocalStack requests
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=2.1
    # not sure all of these packages are required
    opentelemetry-api
    opentelemetry-sdk

[options.entry_points]
localstack.extensions =
    opentelemetry-extension = opentelemetry_extension.extension:MyExtension
